# Perspective-Renderer

./: .gitattributes  .gitignore  .gitmodules  README.md
CS300_/1.0 - Simple Scene/: Affine.h  CMakeLists.txt  DiffuseShaderPhong.frag  DiffuseShaderPhong.vert  GLApplication.cpp  LineShader.vert  NormalGenerator.geom  NormalGenerator.vert  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Scene.cpp  Scene.h  SimpleScene_Quad.cpp  SimpleScene_Quad.h  VertexDataManager.cpp  VertexDataManager.h  stdafx.h
CS300_/1.0 - Simple Scene/ImGui/: imgui_demo.cpp  imgui_draw.cpp
CS300_/1.0 - Simple Scene/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLUniformBufferObject.cpp  OpenGLUniformBufferObject.h
CS300_/1.0 - Simple Scene/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Light.cpp  Light.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  UniformBufferObject.cpp  UniformBufferObject.h
CS300_/1.0 - Simple Scene/Shaders/: DefaultShader.frag  DefaultShader.vert  DiffuseShaderPhong.frag  DiffuseShaderPhong.vert  LineShader.frag  NormalGenerator.frag
CS300_/1.0 - Simple Scene/Shaders/Assignment2/: PhongLighting.frag  PhongLighting.vert
CS300_DSA/: CMakeLists.txt  README.txt
CS300_DSA/1.0 - Simple Scene/: Affine.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GLApplication.cpp  MyUBO.cpp  MyUBO.h  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  ProgramPipeline.cpp  ProgramPipeline.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SimpleScene_Quad.cpp  SimpleScene_Quad.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  stdafx.h
CS300_DSA/1.0 - Simple Scene/ImGui/: imgui.cpp  imgui_internal.h  imgui_widgets.cpp
CS300_DSA/1.0 - Simple Scene/ImGui/examples/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
CS300_DSA/1.0 - Simple Scene/ImGui/examples/example_glfw_opengl3/: main.cpp
CS300_DSA/1.0 - Simple Scene/Shaders/: DefaultShader.frag  DefaultShader.vert  DiffuseShaderPhong.frag  DiffuseShaderPhong.vert  NormalGenerator.frag  NormalGenerator.geom  NormalGenerator.vert  SkyboxShader.frag  SkyboxShader.vert
CS300_DSA/1.0 - Simple Scene/Shaders/Assignment2/: BlinnPhong.frag  PhongLighting.frag  PhongLighting.vert  PhongShading.frag  PhongShading.vert
CS300_DSA/1.0 - Simple Scene/Shaders/Assignment3/: BlinnPhong.vert  EnvironmentMapping.frag  PhongShading.frag
CS300_DSA/Common/textures/: .gitattributes
CS300_DSA/Source/externalSrc/: imgui_impl_opengl3.h
CS300_DSA/Source/shaders/: ShaderLocations.h
CS300_DSA/Source/src/: App.h  BasicMaterial.cpp  Bitmask.h  CS350.cpp  CS350.h  CameraBase.cpp  CameraBase.h  CameraUniforms.cpp  CameraUniforms.h  DebugLineMaterial.cpp  DebugLineMaterial.h  DebugModel.cpp  DebugSystem.h  DeferredRenderPipeline.h  DirectionalLight.cpp  DirectionalLight.h  EmptyVAO.h  FPSCamera.cpp  FinalPass.cpp  FinalPass.h  ForwardRendering.cpp  ForwardRendering.h  GBuffer.cpp  GBuffer.h  GeometryPass.cpp  GeometryPass.h  GuiSystem.cpp  GuiSystem.h  Input.cpp  Input.h  LightBuffer.cpp  LightBuffer.h  LightPass.cpp  LightPass.h  Logger.cpp  Logger.h  Material.cpp  Material.h  MaterialSystem.cpp  MaterialSystem.h  (+25 more)
CS300_DSA/shaders/: CameraUniforms.h  ShaderLocations.h  ShaderTypes.h  common.glsl  final.frag.glsl
CS300_DSA/shaders/light/: directional.frag.glsl  directional.vert.glsl
CS300_DSA/shaders/material/: PowerPlant.frag.glsl  PowerPlant.vert.glsl  basic.vert.glsl  debugLine.frag.glsl  debugLine.vert.glsl
Perspective/: .gitattributes  CMakeLists.txt  README.txt  Readme.md  RunCMake.bat  bsttree.json  imgui.ini  octree.json
Perspective/Common/: anim_allAnim_01.fbx  anim_roll_01.fbx  anim_wave_01.fbx  cylinder.fbx  runningMan.fbx
Perspective/Common/Animation/: anim_fish.fbx  anim_idle_01.fbx
Perspective/Common/PowerPlantFiles/: Section1.txt  Section10.txt  Section11.txt  Section12.txt  Section13.txt  Section14.txt  Section15.txt  Section15a.txt  Section15b.txt  Section16.txt  Section17.txt  Section18.txt  Section19.txt  Section2.txt  Section20.txt  Section21.txt  Section3.txt  Section7.txt  Section8.txt  Section9.txt
Perspective/Common/textures/: metal_roof_diff_512x512.ppm  metal_roof_spec_512x512.ppm
Perspective/Source/deprecated/: CS460AssignmentOne.cpp  CS460AssignmentOne.h
Perspective/Source/externalSrc/: debug_draw.hpp  implot_demo.cpp
Perspective/Source/src/: AABB.cpp  AABB.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  App.cpp  App.h  AssignmentFour.cpp  AssignmentFour.h  AssignmentThree.cpp  AssignmentThree.h  AssignmentTwo.cpp  AssignmentTwo.h  BSPTree.cpp  BSPTree.h  BasicMaterial.cpp  BasicMaterial.h  BezierCurve.cpp  BezierCurve.h  BidirectionalMap.h  Bitmask.h  Bone.cpp  Bone.h  Broadphase.cpp  Broadphase.h  BufferObject.hpp  CS350.cpp  CS350.h  CS460AssigmmentFour.cpp  CS460AssigmmentFour.h  CS460AssignmentOne.cpp  CS460AssignmentOne.h  CameraBase.cpp  CameraBase.h  Collider.h  Collision.cpp  Collision.h  CollisionTestCases.cpp  CompleteMaterial.cpp  (+92 more)
Perspective/shaders/: CameraUniforms.h  Quaternion.h  ShaderLocations.h  quad.vert.glsl
Perspective/shaders/material/: Phong_Animated.frag.glsl  Phong_Animated.vert.glsl  PowerPlant.frag.glsl  basic.frag.glsl  debugLine.frag.glsl
Perspective/tools/cmake/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html
Perspective/tools/cmake/doc/cmake/html/_static/: documentation_options.js
Perspective/tools/cmake/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_name.html  (+111 more)
Perspective/tools/cmake/man/man1/: cmake.1  cpack.1  ctest.1
Perspective/tools/cmake/man/man7/: cpack-generators.7
(+1648 files in other folders)
